portfolio page clean up

--- a/assets/style.css
+++ b/assets/style.css
@@ -35,3 +35,19 @@ img{
     border-radius: 50%;
     margin-top: 5%;
 }
+
+.navbar {
+    position: sticky;
+    top: 0;
+    z-index: 10;
+}
+
+.navbar-nav a:hover {
+    background-color: rgb(31, 31, 31);
+}
+
+#home a {
+    font-size: 1.3em; 
+    color: steelblue; 
+    /* font-weight: bold; */
+}
