--- a/assets/style.css
+++ b/assets/style.css
@@ -23,6 +23,7 @@ img{
 }
 
 .project-title {
+    display: inline;
     font-size: 1.5em;
     color: steelblue;
 }
@@ -50,4 +51,10 @@ img{
     font-size: 1.3em; 
     color: steelblue; 
     /* font-weight: bold; */
+}
+
+.my-hyperlinks {
+    padding-left: 5px;
+    font-size: 0.9em;
+    font-style: italic;
 }
