--- a/assets/style.css
+++ b/assets/style.css
@@ -58,3 +58,15 @@ img{
     font-size: 0.9em;
     font-style: italic;
 }
+
+/* .link-icon {
+    visibility: hidden;
+}
+
+.my-hyperlinks:hover .link-icon {
+    visibility: hidden;
+}
+
+.my-hyperlinks:hover .link-icon {
+    visibility: visible;
+} */
